--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en" data-beasties-container>
+<head>
   <meta charset="utf-8">
-  <title>WriteClientReport</title>
+  <title>WriteMyClientReportForms</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.57c1da058d5340ca783e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.57c1da058d5340ca783e.css"></noscript></head>
+<link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.09cac5369e3ff4c930c4.js" defer></script><script src="polyfills.1a98c15bd43985bd49c2.js" defer></script><script src="main.8005ce815db643b0d879.js" defer></script>
-
-</body></html>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-QHUQ2YCY.js" type="module"></script></body>
+</html>
